--- a/css/principal.css
+++ b/css/principal.css
@@ -43,7 +43,6 @@ body {
     font-size: 20px;
     font-weight: bold;
 }
-
 #cabecalho {
     margin-left: 45%;
     margin-top: 5%;
@@ -53,7 +52,7 @@ body {
     margin-left: 20%;
     margin-right: 20%;
     margin-top: 5%;
-    padding-bottom: 150px;
+    margin-bottom: 50px;
     background-color: white;
 }
 
